# deq

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/tests/: feature_serde.rs
macros/: Cargo.toml
macros/src/: lib.rs
