[package]
name = "deq"
version = "0.1.5"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
description = "Deq - A simple rust transaction system that allows reverting any changes made to a struct"
license = "MIT"
homepage = "https://github.com/unlink2/deq"
readme = "../README.md"

[lib]
name = "deq"
path = "src/lib.rs"

[dependencies]
deq_macros = {path = "../macros", version = "0.1.5"}
deq_core = {path = "../core", version = "0.1.5"}
