[package]
name = "deq_macros"
version = "0.1.1"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
description = "Deq macros"
license = "MIT"
homepage = "https://github.com/unlink2/deq"

[lib]
name = "deq_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
deq_core = {path = "../core", version = "0.1.1"}
